--- a/base/templates/base/app_base.html
+++ b/base/templates/base/app_base.html
@@ -26,13 +26,13 @@ body {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand" href="#"><span class="glyphicon glyphicon-cloud"></span>Cloud Computing</div>
+      <div class="navbar-brand" href="#"><span class="glyphicon glyphicon-cloud"></span>Virtual Desktop Cloud</div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/">My Desktops</a></li>
+       <!-- <li><a href="/">My Desktops</a></li>-->
       </ul>
       {% block navbar_extra%}
       {% endblock %}
@@ -44,7 +44,7 @@ body {
 
 {% block content %}
 
-  <h3>Desktop List</h3>
+  <h4>My desktops</h4>
 
   <!-- Table -->
   <table class="table table-striped table-condensed" >
