--- a/web/base/templates/base/app_base.html
+++ b/web/base/templates/base/app_base.html
@@ -31,8 +31,8 @@ body {
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-       <!-- <li><a href="/">My Desktops</a></li>-->
+      <ul class="nav navbar-nav navbar-right">
+       <li><a href="/accounts/logout">logout</a></li>
       </ul>
       {% block navbar_extra%}
       {% endblock %}
@@ -52,8 +52,8 @@ body {
       {% block desktops_table_head%}
       <th>#</th>
       <th>Desktop Name</th>
-      <th>Owner</th>
       <th>Ami</th>
+      <th>Owner</th>
       <th>Current State</th>
       <th>Public Dns</th>
       <th>Creation Date</th>
@@ -66,8 +66,8 @@ body {
           <td>
           <a href="/desktops/delete/{{desktop.name}}" ><span class="glyphicon glyphicon-remove black"></a></td>
           <td>{{ desktop.name }}</td>
-          <td>{{ desktop.owner }}</td>
           <td>{{ desktop.ami }}</td>
+          <td>{{ desktop.owner }}</td>
           <td>{{ desktop.state }}</td>
           <td>{{ desktop.dns }}</td>
           <td>{{ desktop.creation_date }}</td>
